--- a/.gitignore
+++ b/.gitignore
@@ -300,3 +300,6 @@ TSWLatexianTemp*
 *.glstex
 
 # End of https://www.toptal.com/developers/gitignore/api/latex
+
+# selbst ergänzte
+samplepaper.pdf
